--- a/css/styles.css
+++ b/css/styles.css
@@ -873,37 +873,41 @@ img {
 }
 .backdrop {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+    
+    inset: 0;
+   
+    
+   
     background-color: rgba(46, 47, 66, 0.4)
 }
 
 .backdrop.is-open {
     display: flex;
+    
 }
 
 .modal {
-    background-color: #fff;
-    padding: 72px 24px 24px;
-    border-radius: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fcfcfc;
+    max-width: 408px;
+    width: 100%;
+    min-height: 584px;
+    border-radius: 4px;
     
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    width: 408px;
-    min-height: 584px;
-    background: #fcfcfc;
-    text-align: center;
-    position: absolute;
-    border-radius: 4px;
-    top: 50%;
-    left: 50%;
+    padding: 24px;
+    padding-top: 72px
+    
+    
+   
+    
+    
+   
+   
     
 }
 
@@ -930,25 +934,32 @@ img {
 }
 
 .close-button {
-    background: none;
-    border: none;
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
+    min-width: 24px;
+    min-height: 24px;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    background: #e7e9fc;
+
+    
+   
+    
+    
+    
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
     cursor: pointer;
     padding: 0;
-   
+
+    svg {
+      width: 8px;
+      height: 8px;
+    
+    
+
+        
+
+ }
 }
 
 .close-icon {
@@ -1004,18 +1015,10 @@ img {
     font-size: 12px;
 }
 
-.input-wrapper {
+
+
+.modal-form .icon {
     position: relative;
-    height: 40px;
-    width: 100%;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    top: 50%;
-    margin-bottom: 16px;
-
-}
-
-.input-wrapper .icon {
-    position: absolute;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
@@ -1059,8 +1062,15 @@ img {
 
 
 .form-input {
+    margin-bottom: 8px;
+    display: block;
     width: 100%;
-    height: 120px;
+    height: 40px;
+    color: #333;
+
+
+   
+    
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     padding: 8px 16px;
@@ -1074,7 +1084,7 @@ img {
     padding: 8px;
     box-sizing: border-box;
     border-radius: 4px;
-    margin-bottom: 16px;
+    margin-bottom: 8px;
     font-family: inherit;
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1125,7 +1135,7 @@ img {
 
 .modal-form .form-group.checkbox-group input {
     margin-right: 10px;
-    margin-bottom: 16px
+    margin-bottom: 24px
 }
 
 .input-wrapper input:focus,
@@ -1177,3 +1187,4 @@ img {
     background-color: #404bbf;
     border: none;
 }
+
