--- a/css/styles.css
+++ b/css/styles.css
@@ -1166,11 +1166,13 @@ img {
     padding: 16px,32px,16px,32px;
     font-size: 16px;
     gap: 10px;
-    width: 169px;
+    
+    min-width: 169px;
     height: 56px;
     top: 584px;
     left: 635px;
-
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     cursor: pointer;
     background-color: #4d5ae5;
     color: white;
