--- a/css/styles.css
+++ b/css/styles.css
@@ -662,6 +662,8 @@ img {
     font-size: 16px;
     font-weight: 500;
     background-color: #4D5AE5;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
     border: none;
@@ -676,8 +678,10 @@ img {
 }
 
 .subscribe-icon {
-    margin-left: 8px;
-    /* Додамо відступ для іконки всередині кнопки */
+    margin-left: 16px;
+    width: 24px;
+    height: 24px;
+    
 }
 
 .subscribe-input  {
@@ -873,18 +877,24 @@ img {
 }
 .backdrop {
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 999;
     inset: 0;
     opacity: 0;
     pointer-events: none;
     transition: opacity 250ms ease-in-out;
-    
+    width: 100%;
+    height: 100%;
+    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: hidden;
    
     background-color: rgba(46, 47, 66, 0.4)
 }
 
 .backdrop.is-open {
     display: flex;
+    visibility: visible;
     opacity: 1;
     pointer-events: auto ;
     
