--- a/css/styles.css
+++ b/css/styles.css
@@ -883,10 +883,11 @@ img {
     inset: 0;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms ease-in-out;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     width: 100%;
     height: 100%;
-    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     visibility: hidden;
    
     background-color: rgba(46, 47, 66, 0.4)
