--- a/css/styles.css
+++ b/css/styles.css
@@ -933,8 +933,8 @@ img {
     border: 1px solid rgba(46, 47, 66, 0.4);
     color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
-    
-    color: #2e2f42;
+    padding: 8px 16px;
+    color: rgba(46, 47, 66, 0.4);
     width: 100%;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -1115,14 +1115,14 @@ img {
 
 .modal-form .form-group input,
 .modal-form .form-group textarea {
-    width: calc(100% - 16px);
+    width: 100%;
     padding: 8px 16px;
     height: 120px;
     margin: 0 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 12px;
-    height: 40px;
+    
     border: 1px solid rgba(46, 47, 66, 0.4);
     padding-left: 38px;
     outline: transparent;
