--- a/css/styles.css
+++ b/css/styles.css
@@ -857,9 +857,18 @@ img {
     border: 0;
 }
 
+.form-group {
+    margin-bottom: 16px;
+}
+
 .checkbox-group {
     display: flex;
     align-items: center;
+}
+.custom-checkbox {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
 .checkbox-group label {
@@ -899,6 +908,47 @@ img {
     opacity: 1;
     pointer-events: auto ;
     
+}
+.checkbox-icon {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border: 2px solid #2e2f42;
+    border-radius: 4px;
+    margin-right: 8px;
+    position: relative;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-icon .icon-vector {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-group input:checked+.checkbox-icon .icon-vector {
+    opacity: 1;
+}
+
+.checkbox-group input:focus+.checkbox-icon {
+    border-color: #404bbf;
+}
+
+.label-text {
+    font-size: 16px;
+    color: #2e2f42;
+}
+
+.label-text a {
+    color: #4d5ae5;
+    text-decoration: none;
+}
+
+.label-text a:hover {
+    text-decoration: underline;
 }
 
 .modal {
@@ -1224,3 +1274,8 @@ img {
     border: none;
 }
 
+.subscribe-icon {
+    margin-left: 16px;
+    width: 24px;
+    height: 24px;
+}
