--- a/css/styles.css
+++ b/css/styles.css
@@ -1019,6 +1019,7 @@ img {
     
     text-align: left;
     margin-bottom: 8px;
+    
 }
 
 .modal-form .form-group label {
@@ -1118,6 +1119,26 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: transparent;
 }
+
+
+
+
+.modal-form .form-group input {
+    width: 100%;
+    padding: 8px 16px;
+    height: 40px;
+    margin: 0 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 12px;
+
+
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding-left: 38px;
+    outline: transparent;
+    border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
 
 
 
