--- a/css/styles.css
+++ b/css/styles.css
@@ -718,7 +718,7 @@ img {
 }
 
 .footer-content {
-    margin-right: 120;
+    margin-right: 120px;
     max-width: 300px;
        
 
@@ -1137,7 +1137,7 @@ img {
     padding-left: 38px;
     outline: transparent;
     border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+}
 
 
 
@@ -1243,4 +1243,4 @@ img {
     background-color: #404bbf;
     border: none;
 }
-
+}
