--- a/css/styles.css
+++ b/css/styles.css
@@ -1057,8 +1057,10 @@ img {
 .input-wrapper input {
     padding-left: 40px;
     width: 100%;
+    width: 360px;
     background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color: #2E2F42 40%;
 
     
 }
@@ -1094,55 +1096,28 @@ img {
     display: block;
     width: 100%;
     height: 40px;
-    color: #333;
-
-
-
+    width: 360px;
+    border: 1px;
+    border-radius: 1px;
+    top: 84px;
+    border-color: #2E2F42 40%;
    
-    
-    border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    padding: 8px 16px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    resize: none;
-    color: rgba(46, 47, 66, 0.4);
-    border: 1px solid #ccc;
-    outline: transparent;
-    padding: 8px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    margin-bottom: 8px;
-    font-family: inherit;
-    resize: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: transparent;
 }
-
-
-
 
 .modal-form .form-group input {
     width: 100%;
+    width: 360px;
     padding: 8px 16px;
     height: 40px;
     margin: 0 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 12px;
-
-
     border: 1px solid rgba(46, 47, 66, 0.4);
     padding-left: 38px;
     outline: transparent;
     border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
-
-
-
 
 .modal-form .form-group textarea {
     width: 100%;
@@ -1152,8 +1127,6 @@ img {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 12px;
-    
-    
     border: 1px solid rgba(46, 47, 66, 0.4);
     padding-left: 38px;
     outline: transparent;
