--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,21 @@ img {
     color: #2e2f42;
 }
 
+
+.label-text  {
+    display: block;
+    font-weight: 400;
+    
+    line-height: 14px;
+    margin-bottom: 4px;
+    letter-spacing: 0.04em;
+    font-size: 14px;
+    color: #8E8F99;
+    line-height: 1.17;
+    font-size: 12px;
+     
+ }
+
 .logo {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -1168,10 +1183,15 @@ img {
 }
 
 .modal-form .form-group.checkbox-group label {
+    display: block;
+    font-weight: 400;
+    line-height: 14px;
+    margin-bottom: 4px;
+    letter-spacing: 0.04em;
     font-size: 14px;
-    color: #333;
-    margin-bottom: 0;
-    line-height: normal;
+    color: #8E8F99;
+    line-height: 1.17;
+    font-size: 12px;
    
 }
 
