--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,9 @@ img {
   display: block;
   margin-bottom: 4px;
     font-size: 12px;
-    line-height: 1.16667;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    line-height: 1.17;
 }
 
 .logo {
@@ -818,7 +818,7 @@ border-radius: 2px;
     border: none;
     fill: #f4f4fd;
 }
-.checkbox-group a {
+.label-text {
   color: #4d5ae5;
   text-decoration: underline;
 }
@@ -978,7 +978,7 @@ border-radius: 2px;
 
 .form-input {
   width: 100%;
-
+  background-color: transparent;
   height: 40px;
   border-radius: 4px;
   font-size: 12px;
@@ -993,12 +993,16 @@ border-radius: 2px;
 }
 .textarea-input {
   width: 100%;
+  background-color: transparent;
   padding: 8px 16px;
   height: 120px;
+line-height: 1.17;
+letter-spacing: 0.04em;
   display: block;
   border-radius: 4px;
   resize: none;
   font-size: 12px;
+ color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
